refactor code + add mapper + fix with trigger create ID